@@ -2,6 +2,10 @@
 
 CHANGELOG file for Style Guide.
 
+22-OCT-2010
+-- #949758. Use t() normally.
+-- #949764. Suppert attributes for tags.
+
 21-OCT-2010
 -- Patch #948886 by Dave Reid. General code cleaup and renderable arrays.
 
